[package]
name = "libdaw"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true
readme.workspace = true
description = 'A library for Rust for making programmable DAWs'
categories = [
  'multimedia::audio',
]

[lib]
crate-type = ['lib', 'cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
