[package]
name = "ludaw"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true
readme.workspace = true
description = 'A code-driven DAW with a Lua interface'
categories = [
  'multimedia::audio',
]

[dependencies]
rodio = "0.17.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mlua]
version = "0.9.5"
features = ["lua54", "vendored"]

[dependencies.libdaw]
path = '../libdaw'
